--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS=foreign
-SUBDIRS=lib
 bin_PROGRAMS=kikimora
+kikimora_LDADD=-ljsoncpp
 kikimora_SOURCES=main.cpp
-kikimora_LDADD=lib/kikimora/libkikimora.a
+AM_CPPFLAGS=-Ilib -I../inc
