refine the folders

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,4 +2,5 @@ AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=kikimora
 kikimora_LDADD=-ljsoncpp
 kikimora_SOURCES=main.cpp
-AM_CPPFLAGS=-Ilib -I../inc
+AM_CPPFLAGS=-Ilib \
+			-I../inc
