--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -115,7 +115,7 @@ am__v_at_ = $(am__v_at_@AM_DEFAULT_V@)
 am__v_at_0 = @
 am__v_at_1 = 
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
-depcomp = $(SHELL) $(top_srcdir)/depcomp
+depcomp = $(SHELL) $(top_srcdir)/tmp/depcomp
 am__depfiles_maybe = depfiles
 am__mv = mv -f
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
@@ -157,7 +157,7 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 ETAGS = etags
 CTAGS = ctags
-am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/depcomp
+am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/tmp/depcomp
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
@@ -254,7 +254,9 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 kikimora_LDADD = -ljsoncpp
 kikimora_SOURCES = main.cpp
-AM_CPPFLAGS = -Ilib -I../inc
+AM_CPPFLAGS = -Ilib \
+			-I../inc
+
 all: all-am
 
 .SUFFIXES:
