--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,5 +2,6 @@ AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=kikimora
 kikimora_LDADD=-ljsoncpp
 kikimora_SOURCES=main.cpp
-AM_CPPFLAGS=-Ilib \
+AM_CPPFLAGS=-std=c++11 \
+			-Ilib \
 			-I../inc
