--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,5 +4,4 @@ kikimora_LDADD=-ljsoncpp
 kikimora_SOURCES=main.cpp \
 				 lib/json/jsoncpp.cpp
 AM_CPPFLAGS=-std=c++11 \
-			-Ilib \
-			-I../inc
+			-Ilib
