--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=kikimora
 kikimora_LDADD=-ljsoncpp
-kikimora_SOURCES=main.cpp \
-				 lib/json/jsoncpp.cpp
+kikimora_SOURCES=kikimora.cpp \
+				 lib/json/jsoncpp.cpp \
+				 lib/docopt/docopt.cpp
 AM_CPPFLAGS=-std=c++11 \
 			-Ilib
