change rapidxml to xerces-c

--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_PROG_CXX
 AC_PROG_CC
 
 # Checks for libraries.
-AC_CHECK_LIB([pthread])
+AC_CHECK_LIB([xerces-c])
 AC_PROG_RANLIB
 # Checks for header files.
 AC_CHECK_HEADERS([stddef.h stdint.h stdlib.h])
