--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=kikimora
-kikimora_LDADD=-ljsoncpp
+kikimora_LDADD=-ljsoncpp -lxerces-c
 kikimora_SOURCES=kikimora.cpp \
 				 lib/json/jsoncpp.cpp \
 				 lib/docopt/docopt.cpp
