--- a/config.h.in
+++ b/config.h.in
@@ -3,8 +3,8 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have the `pthread' library (-lpthread). */
-#undef HAVE_LIBPTHREAD
+/* Define to 1 if you have the `xerces-c' library (-lxerces-c). */
+#undef HAVE_LIBXERCES_C
 
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
